--- a/backend/.env
+++ b/backend/.env
@@ -1,20 +1,51 @@
-# .env
 # Configuración del servidor
 PORT=3001
 NODE_ENV=development
+API_PREFIX=/api
 
 # Configuración de la base de datos
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=Dianaleire-1
 DB_NAME=scraper_db
+DB_PORT=3306
+DB_CONNECTION_LIMIT=10
+DB_QUEUE_LIMIT=0
+DB_CONNECTION_TIMEOUT=10000
 
-# JWT Secret para autenticación
+# Configuración de pool de conexiones
+DB_ACQUIRE_TIMEOUT=60000
+DB_IDLE_TIMEOUT=10000
+DB_MAX_CONNECTIONS=10
+DB_MIN_CONNECTIONS=0
+
+# JWT y Seguridad
 JWT_SECRET=tu_secreto_jwt_super_seguro_cambiame_en_produccion
+JWT_EXPIRATION=24h
+BCRYPT_SALT_ROUNDS=10
+RATE_LIMIT_WINDOW=15
+RATE_LIMIT_MAX_REQUESTS=100
 
 # Configuración de CORS
 CORS_ORIGIN=http://localhost:3000
+CORS_METHODS=GET,POST,PUT,DELETE,OPTIONS
+CORS_ALLOWED_HEADERS=Content-Type,Authorization,X-Requested-With
 
-# Timeouts
+# Timeouts y Límites
 SCRAPER_TIMEOUT=30000
-DB_CONNECTION_TIMEOUT=10000
+REQUEST_BODY_LIMIT=50mb
+REQUEST_PARAMETER_LIMIT=5000
+
+# Configuración de Logger
+LOG_LEVEL=debug
+LOG_FORMAT=dev
+
+# Cache y Rendimiento
+CACHE_TTL=3600
+MAX_CACHE_ITEMS=1000
+
+# Configuración de Scraper
+SCRAPER_USER_AGENT=Mozilla/5.0 (compatible; ScraperBot/1.0;)
+SCRAPER_MAX_REDIRECTS=5
+SCRAPER_FOLLOW_REDIRECTS=true
+SCRAPER_MAX_RESPONSE_SIZE=5242880 # 5MB
